# clock-offset-fetcher

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  gdb_command  readme.md
cmake/: gtest.cmake
examples/: main.cpp
include/: clock_offset.h  clock_offset_udp_server.h
src/: clock_offset.cpp  clock_offset_udp_server.cpp
tests/: tests.cpp
